Workspace/Eclipse2021/.metadata/.plugins/org.eclipse.cdt.ui/Lab 1.0.build.log
14:38:54 **** Incremental Build of configuration Debug for project Lab 1.0 ****
make all 
Building file: ../GenericStack.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"GenericStack.d" -MT"GenericStack.o" -o "GenericStack.o" "../GenericStack.cpp"
In file included from ../GenericStack.cpp:1:
../GenericStack.h:5:9: error: 'BasicContainer.h' file not found with <angled> include; use "quotes" instead
#include<BasicContainer.h>
        ^~~~~~~~~~~~~~~~~~
        "BasicContainer.h"
../GenericStack.h:10:7: error: explicit specialization of undeclared template class 'GenericStack'
class GenericStack<T>: public BasicContainer<T>
      ^           ~~~
../GenericStack.h:10:31: error: unknown template name 'BasicContainer'
class GenericStack<T>: public BasicContainer<T>
                              ^
../GenericStack.h:24:22: error: overloaded 'operator<<' must be a binary operator (has 3 parameters)
       std::ostream& operator<< (std::ostream& os, const GenericStack& a);
                     ^
../GenericStack.h:25:13: error: overloaded 'operator==' must be a binary operator (has 3 parameters)
       bool operator== (const GenericStack&, const GenericStack &);
            ^
../GenericStack.h:26:13: error: overloaded 'operator<' must be a binary operator (has 3 parameters)
       bool operator< (const GenericStack& a, const GenericStack & b);
            ^
../GenericStack.h:29:12: error: duplicate member 'size'
       int size;
           ^
../GenericStack.h:22:12: note: previous declaration is here
       int size();
           ^
../GenericStack.cpp:7:21: error: unknown type name 'list'
   stackArray = new list(CAPACITY);
                    ^
../GenericStack.cpp:8:4: error: reference to non-static member function must be called
   size = 0;
   ^~~~
../GenericStack.cpp:18:21: error: unknown type name 'vector'; did you mean 'hecto'?
   stackArray = new vector(other.CAPACITY);
                    ^~~~~~
                    hecto
/Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/ratio:282:43: note: 'hecto' declared here
typedef ratio<                100LL, 1LL> hecto;
                                          ^
../GenericStack.cpp:20:4: error: reference to non-static member function must be called
   size = other.size();
   ^~~~
../GenericStack.cpp:23:1: error: use of class template 'GenericStack' requires template arguments
GenericStack& GenericStack<T>::operator=(const GenericStack &other)
^
../GenericStack.h:10:7: note: template is declared here
class GenericStack<T>: public BasicContainer<T>
      ^
../GenericStack.cpp:25:21: error: unknown type name 'list'
   stackArray = new list(other.CAPACITY);
                    ^
../GenericStack.cpp:27:4: error: reference to non-static member function must be called
   size = other.size();
   ^~~~
../GenericStack.cpp:31:23: error: out-of-line definition of 'empty' does not match any declaration in 'GenericStack<T>'
bool GenericStack<T>::empty()
                      ^~~~~
../GenericStack.h:17:13: note: member declaration does not match because it is const qualified
       bool empty() const;
            ^       ~~~~~
../GenericStack.cpp:34:8: error: reference to non-static member function must be called
   if (size == 0)
       ^~~~
../GenericStack.cpp:42:8: error: reference to non-static member function must be called
   if (size == CAPACITY)
       ^~~~
../GenericStack.cpp:48:6: error: reference to non-static member function must be called
   ++size;
     ^~~~
../GenericStack.cpp:54:8: error: use of undeclared identifier 'isEmpty'
   if (isEmpty()) {
       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [GenericStack.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

14:38:57 Build Failed. 20 errors, 0 warnings. (took 2s.495ms)

